# headFirstCpp

./: CMakeLists.txt  README.md
1_strategy/: strategy.cpp  strategy.h  strategy_test.cpp
2_observer/: observer.cpp
3_decorator/: decorator.cpp
4_factory/: factory.cpp  factorySimple.cpp
5_singleton/: singleton.cpp
6_command/: command.cpp
7_adapter/: adapter.cpp
8_templateMethod/: templateMethod.cpp
9_itComp/: component.cpp  iteratorMain.cpp
A_state/: main.cpp
